--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -57,7 +57,7 @@
             </label>
         </div>
 
-        <input class="btn btn-primary btn-block mt-2 col-11 col-sm-11 col-md-12 col-lg-12 col-xl-12" type="submit" value="Search">
+        <input class="btn btn-primary btn-block mt-2 mb-2 col-11 col-sm-11 col-md-12 col-lg-12 col-xl-12" type="submit" value="Search">
     </form>
 
     <table th:if="${contacts != null}" class="table table-hover table-light">
