--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,13 +24,16 @@
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" th:field="*{username}" id="username" />
-                <p th:if="${#fields.hasErrors('username')}" th:errorclass="error" th:errors="*{username}" />
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" th:field="*{password}" id="password" />
-                <p th:if="${#fields.hasErrors('password')}" th:errorclass="error" th:errors="*{password}" />
             </div>
+
+            <div>
+                <p th:if="${#fields.hasErrors('global')}" th:errorclass="error" th:errors="*{global}" />
+            </div>
+
             <button type="submit" class="btn btn-primary btn-block" id="signInButton">Login</button>
         </form>
     </div>
